# project-frame

./: CHANGELOG.md  CMakeLists.txt  README.md
examples/proj/components/: new_file.comp
src/: ast.c  ast.c~  component.c  file_vec.c  lexer.c  main.c  parser.c  processor.c  sema.c  sema.c~  utils.c
src/lib/: ast.h  ast.h~  component.h  file_vec.h  lexer.h  parser.h  processor.h  sema.h  sema.h~  utils.h
